# osmocom-bb

src/host/layer23/include/osmocom/bb/common/: Makefile.am
src/host/layer23/src/common/: Makefile.am  main.c
src/host/layer23/src/mobile/: app_mobile.c
src/host/trxcon/: configure.ac
src/host/trxcon/include/osmocom/bb/: Makefile.am
src/host/trxcon/include/osmocom/bb/l1gprs/: Makefile.am  l1gprs.h  logging.h
src/host/trxcon/include/osmocom/bb/l1sched/: l1sched.h
src/host/trxcon/include/osmocom/bb/trxcon/: trxcon.h
src/host/trxcon/src/: Makefile.am  gprs.c  l1gprs_test.c  sched_trx.c  trx_if.c  trxcon_fsm.c  trxcon_inst.c  trxcon_main.c  trxcon_shim.c
